--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ author:
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
-  dribbble         : # Username
-  github           : "https://github.com/NathanDrake67/"
+  dribbble         : # Username - "https://github.com/NathanDrake67/"
+  github           : "NathanDrake67/"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
